# hyprtheme

./: Cargo.toml  Makefile  README.md  _example-config.toml  ex.conf  hyprtheme.desktop  main.py  readme.md  requirements.txt
src/: __main__.py  cli.py  cli.rs  cli_flags.rs  config.rs  consts.rs  default_variables.conf  helper.rs  hypr.rs  main.rs  repo.rs  socket.rs  theme.rs  util.rs
src/cli/: commands.rs  flags.rs  helper.rs  install.rs  list.rs  mod.rs  parse.rs  remove.rs  render.rs
src/cli_flags/: flags.rs  helper.rs  install.rs  list.rs  remove.rs
src/config/: parse.rs
src/helper/: apply.rs  consts.rs  hypr.rs  mod.rs  util.rs
src/modules/: installed.rs  mod.rs  module.rs  plugin.rs  theme.rs
src/modules/theme/: installed.rs  legacy.rs  online.rs  toml_config.rs
src/parser/: config.rs  mod.rs  theme.rs
src/theme/: consts.rs  default_variables.conf  helper.rs  installed.rs  installed_theme.rs  online.rs  repo.rs  saved.rs  theme.rs  theme_config.rs-old  toml_config.rs
src/theme-old/: default_variables.conf  helper.rs  saved.rs
src/util/: ansi.rs  config.py  config.rs  mod.rs  objects.py  parser.py  repo.py  repo.rs  theme.rs
