[package]
name = "hyprtheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive", "wrap_help", "env"] }
expanduser = "1.2.2"
fast_rsync = "0.2.0"
fs_extra = "1.3.0"
gitmodules = "0.1.0"
owo-colors = "3.5.0"
regex = "1.9.3"
reqwest = "0.11.18"
tokio = { version = "1.31.0", features = ["rt-multi-thread", "macros"] }
toml = "0.7.6"
