[package]
name    = "hyprtheme"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0.111"
clap        = { version = "4.5.4", features = ["derive", "wrap_help", "env"] }
colored     = "2.1.0"
expanduser  = "1.2.2"
fs_extra    = "1.3.0"
regex       = "1.10.2"
reqwest     = "0.11.23"
tokio       = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
toml        = "0.8.8"
shellexpand = "3.1.0"
indicatif   = "0.17.7"
anyhow      = "1.0.82"
git2        = { version = "0.18.3", features = ["https"] }
url         = "2.5.0"
globset     = "0.4.14"
walkdir = "2.5.0"
pathdiff = "0.2.1"
